# roundingsat

./: .gitignore  CMakeLists.txt  InputFormats.md  LICENSE  README.md  input.opb  output.proof  plane-sat.cc  roundingsat.cc  roundingsat.cpp  run.sh
cmake/: soplex_CMakeLists.txt.in  soplex_build_and_load.cmake
src/: CMakeConfig.hpp.in  Constr.cpp  Constr.hpp  ConstrExp.cpp  ConstrExp.hpp  ConstrSimple.cpp  ConstrSimple.hpp  Constraint.hpp  IntSet.hpp  Logger.hpp  LpSolver.cpp  LpSolver.hpp  Options.hpp  SimpleCons.hpp  Solver.cpp  Solver.hpp  SolverStructs.cpp  SolverStructs.hpp  Stats.hpp  aux.cpp  aux.hpp  auxiliary.hpp  exit.cpp  exit.hpp  globals.hpp  parsing.cpp  parsing.hpp  quit.cpp  quit.hpp  roundingsat.cpp  run.cpp  run.hpp  typedefs.hpp
src/soplex/: spxlpbase.h
src/soplex/headers/: array.h  basevectors.h  classarray.h  clufactor.h  clufactor_rational.h  dataarray.h  datahashtable.h  dataset.h  didxset.h  dsvector.h  dsvectorbase.h  dvector.h  dvectorbase.h  idlist.h  idxset.h  lpcol.h  lpcolbase.h  lpcolset.h  lpcolsetbase.h  lprow.h  lprowbase.h  lprowset.h  lprowsetbase.h  mpsinput.h  nameset.h  notimer.h  rational.h  ratrecon.h  slinsolver.h  slinsolver_rational.h  slufactor.h  slufactor_rational.h  sol.h  solbase.h  soplex.h  spxalloc.h  spxautopr.h  spxbasis.h  spxboundflippingrt.h  spxdantzigpr.h  (+43 more)
src/soplex/soplex/: spxlpbase.h
src/used_licenses/: roundingsat.cpp  roundingsat.txt
test/: run_tests.sh  test_proofs.sh
